--- a/Sistema/index.html
+++ b/Sistema/index.html
@@ -17,6 +17,9 @@
                 <label for="">Password </label>
                 <input type="password" name="" id="">
             </div>
+            <div>
+                <input type="submit" value="ENTRAR">
+            </div>
         </form>
 </body>
 </html>
