--- a/Sistema/index.html
+++ b/Sistema/index.html
@@ -20,6 +20,9 @@
             <div>
                 <input type="submit" value="ENTRAR">
             </div>
+            <div>
+                <a href="">Esqueceu sua senha?</a>
+            </div>
         </form>
 </body>
 </html>
