--- a/Sistema/index.html
+++ b/Sistema/index.html
@@ -7,7 +7,7 @@
     <title>Sis Tech - Cadastro de Produtos</title>
 </head>
 <body>
-    <h1>Sis Tech - Cadastro de Produtos</h1>
+    <h1 id="titulo">Sis Tech - Cadastro de Produtos</h1>
         <form action="">
             <h2>Acesso ao Sistema</h2>
             <div>
